# sd-interview

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
backend/arch/: __init__.py  enums.py
backend/arch/admin/: __init__.py  room_answers.py  rooms.py  sections.py  tasks.py  templates.py
backend/arch/api/: routes.py  schemas.py
backend/arch/dtos/: room_answers.py  rooms.py  sections.py  tasks.py  templates.py
backend/arch/models/: __init__.py  room_answers.py  rooms.py  sections.py  tasks.py  templates.py
backend/arch/repositories/: room_answers.py  rooms.py  sections.py
backend/arch/use_cases/: answer_updater.py  review_updater.py  room_creator.py  room_detail.py  room_status_updater.py
backend/arch/websocket/: manage.py  routes.py
backend/core/: dtos.py  enums.py  exceptions.py
backend/core/admin/: __init__.py  tags.py
backend/core/fields/: ckeditor.py  json_editor.py
backend/core/models/: __init__.py  tags.py
backend/core/use_cases/: async_base.py
backend/flow/: enums.py
backend/flow/admin/: __init__.py  candidate_way_sections.py  candidate_ways.py  candidates.py
backend/flow/api/: routes.py  schemas.py
backend/flow/dtos/: __init__.py  candidate_way_sections.py  candidate_ways.py  candidates.py
backend/flow/models/: __init__.py  candidate_way_sections.py  candidate_ways.py  candidates.py
backend/flow/repositories/: __init__.py  candidate_way_sections.py  candidate_ways.py  candidates.py
backend/flow/use_cases/: candidate_detail.py  candidate_list.py  candidate_way_detail.py  candidate_way_list.py  candidate_way_section_updater.py  candidate_way_updater.py
backend/migrations/: env.py
backend/migrations/versions/: 20260313_.py  20260313_0001_init_app_arch.py  20260313_0002_data_app_arch.py  20260313_0002_rooms_app_arch.py  20260313_0003_data_app_arch.py  20260313_0003_rooms_app_arch.py  20260321_0004_init_flow_app.py  20260321_0005_data_flow_app.py  20260328_0006_init_tech_app.py  20260328_0007_data_tech_app.py
backend/settings/: base.py  db.py
backend/tech/: admin.py  enums.py
backend/tech/api/: routes.py  schemas.py  websocket.py
backend/tech/dto/: __init__.py  room_answers.py  rooms.py  tasks.py
backend/tech/models/: __init__.py  room_answers.py  rooms.py  tasks.py
backend/tech/repositories/: room_answers.py  rooms.py  tasks.py
backend/tech/use_cases/: answer_updater.py  room_detail.py
backend/templates/arch/rooms/: details_template.html
backend/templates/sqladmin/: custom_edit.html
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CandidateRoom.tsx  CommentsPanel.tsx  ConditionsPanel.tsx  DrawingCanvas.tsx  Home.tsx  (+12 more)
nginx/: nginx.conf
(+21 files in other folders)
