[project]
name = "backend"
version = "0.1.0"
description = "Simple SD rooms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sqladmin>=0.23.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120
indent-width = 4
src = ["arch", "core", "flow", "settings", "tech"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes — неиспользуемые импорты, переменные
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort — сортировка импортов
    "UP",   # pyupgrade — современный синтаксис Python
    "B",    # flake8-bugbear — потенциальные баги
    "C4",   # flake8-comprehensions — оптимизация comprehensions
    "S",    # flake8-bandit — безопасность
    "BLE",  # flake8-blind-except — запрет голого except
    "T20",  # flake8-print — запрет print()
    "T10",  # flake8-debugger — запрет debugger statements
    "PT",   # flake8-pytest-style — стиль тестов
    "RET",  # flake8-return — правильный return
    "SIM",  # flake8-simplify — упрощение кода
    "DTZ",  # flake8-datetimez — timezone-aware datetime
    "RUF",  # Ruff-specific rules
    "FAST", # FastAPI-специфичные правила
    "ISC",  # flake8-implicit-str-concat
    "TC",   # flake8-type-checking — TYPE_CHECKING блоки
    "PTH",  # flake8-use-pathlib — pathlib вместо os.path
    "ERA",  # eradicate — закомментированный код
]

ignore = [
    "S101",
    "S110",
    "RUF001",
    "RUF002",
    "RUF003",
    "B008",
    "DTZ005",
]

fixable = ["I", "UP", "C4", "RET", "SIM", "TC", "PTH", "ERA"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "T20"]
"migrations/**/*.py" = ["E501"]
"**/admin.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["arch", "core", "flow", "settings", "tech"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
